distribuição de frequência de variável categórica

--- a/src/nbs/distribuição_de_frequência.ipynb
+++ b/src/nbs/distribuição_de_frequência.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ffb5bc7b-719c-489e-a4eb-47b3fa78cb7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "599c8ac8-aea0-4093-b40d-c752576f3d91",
    "metadata": {},
    "outputs": [
@@ -22,7 +31,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "585ee802-7fce-4d53-a67c-eee2c80840f4",
    "metadata": {},
    "outputs": [
@@ -47,7 +56,7 @@
        "'postgresql://root:root@localhost/olist'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ca90d701-c5b6-46fa-8886-3ab9ecd1c688",
    "metadata": {},
    "outputs": [],
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "919b58c4-5e5f-498d-95f4-a7302d008a3c",
    "metadata": {},
    "outputs": [
@@ -203,7 +212,7 @@
        " ('public', 'tb_order_reviews', 'root', None, False, False, False, False)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,12 +226,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6779469b-89e5-40f5-9110-6daf1556ee88",
+   "cell_type": "markdown",
+   "id": "8fa5a4de-e50f-4850-b46c-bf668bd085a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tabelas de distribuição de frequência##\n",
+    "\n",
+    "As tabelas de distribuição de frequência podem ser utilizadas para representar a frequência de ocorrências de um conjunto de registros de variáveis quantitativas ou qualitativas.\n",
+    "\n",
+    "- No caso das variáveis qualitativas, a tabela representa a **frequência de ocorrências de cada categoria da variável**.\n",
+    "- No caso das variáveis quantitativas discretas, a frequência de ocorrências é calculada para cada valor discreto da variável.\n",
+    "- No caso das variáveis quantitativas contínuas, os dados são agrupados em classes e, a partir daí, são calculadas as frequências de ocorrências para cada classe.\n",
+    "\n",
+    "Uma tabela de distribuição de frequências compõem os seguintes cálculos:\n",
+    "\n",
+    "- **Frequência Absoluta** $F_i$: Número de ocorrências para cada elemento $i$ na amostra.\n",
+    "- **Frequência Relativa** ($Fr_i$): Percentual relativo à frequência absoluta.\n",
+    "- **Frequência Acumulada** ($F_ac$): Soma de todas as ocorrências até o elemento analizado.\n",
+    "- **Frequência Relativa Acumulada** ($Fr_ac$): Percentual relativo à frequência acumulada.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2431e189-51c5-4ae9-b02d-de6fb03b261e",
+   "metadata": {},
+   "source": [
+    "## Tabela de distribuição de frequências para variáveis qualitativas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7ba6cccf-f573-419c-9498-8417d32de573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://root:***@localhost/olist\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>forma-de-pagamento</th>\n",
+       "            <th>frequencia-abs</th>\n",
+       "            <th>frequencia-acc</th>\n",
+       "            <th>frequencia-rel</th>\n",
+       "            <th>frepencia-rel-acc</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>voucher</td>\n",
+       "            <td>5775</td>\n",
+       "            <td>5775</td>\n",
+       "            <td>5.56</td>\n",
+       "            <td>5.56</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>not_defined</td>\n",
+       "            <td>3</td>\n",
+       "            <td>5778</td>\n",
+       "            <td>0.00</td>\n",
+       "            <td>5.56</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>debit_card</td>\n",
+       "            <td>1529</td>\n",
+       "            <td>7307</td>\n",
+       "            <td>1.47</td>\n",
+       "            <td>7.03</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>credit_card</td>\n",
+       "            <td>76795</td>\n",
+       "            <td>84102</td>\n",
+       "            <td>73.92</td>\n",
+       "            <td>80.96</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>boleto</td>\n",
+       "            <td>19784</td>\n",
+       "            <td>103886</td>\n",
+       "            <td>19.04</td>\n",
+       "            <td>100.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('voucher', 5775, Decimal('5775'), Decimal('5.56'), Decimal('5.56')),\n",
+       " ('not_defined', 3, Decimal('5778'), Decimal('0.00'), Decimal('5.56')),\n",
+       " ('debit_card', 1529, Decimal('7307'), Decimal('1.47'), Decimal('7.03')),\n",
+       " ('credit_card', 76795, Decimal('84102'), Decimal('73.92'), Decimal('80.96')),\n",
+       " ('boleto', 19784, Decimal('103886'), Decimal('19.04'), Decimal('100.00'))]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "select\n",
+    "    payment_type as \"forma-de-pagamento\"\n",
+    "    ,count(*) as \"frequencia-abs\"\n",
+    "    ,sum(count(*)) over (order by payment_type desc) as \"frequencia-acc\"\n",
+    "    ,round(cast(count(*) as decimal) / (select count(*) from tb_order_payments) * 100 , 2) as \"frequencia-rel\"\n",
+    "    ,round(sum(count(*)) over (order by payment_type desc) / (select count(*) from tb_order_payments) * 100, 2) as \"frepencia-rel-acc\"\n",
+    "from \n",
+    "    tb_order_payments\n",
+    "group by 1;    \n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
